bugged kmeans ex3

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -266,8 +266,7 @@ is found in around 0.001s.
 %-------------------------------------------------------------------------------
 
 \section{Decomposition Method}
-
-TODO: E3
+As already introduced in this section it is described the results obtained by a neural network trained using two block decomposition. More in details, the network is a full RBF in which the centers and the output layer weights are updated alternatively in two consequent steps.
 
 %-------------------------------------------------------------------------------
 
