--- a/doc/main.tex
+++ b/doc/main.tex
@@ -266,9 +266,11 @@ is found in around 0.001s.
 %-------------------------------------------------------------------------------
 
 \section{Decomposition Method}
-As already introduced before, in this section there are described the results obtained by a neural network trained using two block decomposition. More in details, the network is a full RBF in which the centers and the output layer weights are updated alternatively in two consequent steps.\\
-Took the initial guess for the centers the algorithm search the output layer weights \textit{v} by solving the linear least squared problem already shown in the previus section; the second part consists in adjusting the centers through the gradient descent technique and keeping the weights \textit{v} blocked. These two steps are then iteratively repeated until an early stopping rule results satisfacted: here the training procedure terminates when the improvement made over the last 50 epochs on the training error are not greater than 1e-6.\\
-On top of that, considering that little size of the dataset, the training procedure is done using a 5-fold crossvalidation so to keep the training set as large as possible while computing the training(validation) error on different samples.
+As already introduced before, in this section there are described the results obtained by a neural network trained using two block decomposition. More in details, the network is a full RBF, built using the best hyperparameters found in the full minimization section, in which the centers and the output layer weights are updated alternatively in two consequent steps.\\
+Took the initial guess for the centers using the K-means algorithm is a similar way to the unsupervised c. RBFN, the algorithm searches the output layer weights \textit{v} by solving the linear least squared problem already shown in the previus section; the second part consists in adjusting the centers through the gradient descent technique while keeping the weights \textit{v} blocked. These two steps are then iteratively repeated in each epoch until an early stopping rule results satisfacted: here the training procedure terminates when the improvement made over the last 100 epochs on the training error are not greater than 1e-5.\\
+The network and training implementation has been done using Tensorflow: more in details the centers convex optimization is done by solving the linear system using the function \texttt{tf.matrix\_solve\_ls} while the non-convex optimization of the weights \textit{v} is performed using the \texttt{tf.train.GradientDescentOptimizer}.\\
+In this setting the network obtained an error of TRAINING\_ERROR\_HERE on the training error after NUM\_EPOCHS before being stopped by the early stopping rule; finally it achieved a test error of TEST\_ERROR\_HERE.\\
+These results are listed and compared to the ones of the previous section in the table \ref{tab:experiments} .
 
 %-------------------------------------------------------------------------------
 
